--- a/data_extract.ipynb
+++ b/data_extract.ipynb
@@ -417,10 +417,280 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# save your IDs from new project in Spotify Developer Dashboard\n",
+    "CLIENT_ID = 'dc330fb30a704cadb2e3e21687f51943'\n",
+    "CLIENT_SECRET = '03a7b89d0d9e49db886efc7504da2180'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate access token\n",
+    "\n",
+    "# authentication URL\n",
+    "AUTH_URL = 'https://accounts.spotify.com/api/token'\n",
+    "\n",
+    "# POST\n",
+    "auth_response = requests.post(AUTH_URL, {\n",
+    "    'grant_type': 'client_credentials',\n",
+    "    'client_id': CLIENT_ID,\n",
+    "    'client_secret': CLIENT_SECRET,\n",
+    "})\n",
+    "\n",
+    "# convert the response to JSON\n",
+    "auth_response_data = auth_response.json()\n",
+    "\n",
+    "# save the access token\n",
+    "access_token = auth_response_data['access_token']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# used for authenticating all API calls\n",
+    "headers = {'Authorization': 'Bearer {token}'.format(token=access_token)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base URL of all Spotify API endpoints\n",
+    "BASE_URL = 'https://api.spotify.com/v1/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create blank dictionary to store track URI, artist URI, and genres\n",
+    "dict_genre = {}\n",
+    "\n",
+    "# convert track_uri column to an iterable list\n",
+    "track_uris = df_library['track_uri'].to_list()\n",
+    "\n",
+    "# loop through track URIs and pull artist URI using the API,\n",
+    "# then use artist URI to pull genres associated with that artist\n",
+    "# store all these in a dictionary\n",
+    "for t_uri in track_uris:\n",
+    "    \n",
+    "    dict_genre[t_uri] = {'artist_uri': \"\", \"genres\":[]}\n",
+    "    \n",
+    "    r = requests.get(BASE_URL + 'tracks/' + t_uri, headers=headers)\n",
+    "    r = r.json()\n",
+    "    a_uri = r['artists'][0]['uri'].split(':')[2]\n",
+    "    dict_genre[t_uri]['artist_uri'] = a_uri\n",
+    "    \n",
+    "    s = requests.get(BASE_URL + 'artists/' + a_uri, headers=headers)\n",
+    "    s = s.json()\n",
+    "    dict_genre[t_uri]['genres'] = s['genres']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_uri</th>\n",
+       "      <th>artist_uri</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3khntzHFE5TrhT7OKrFlPh</td>\n",
+       "      <td>0rasA5Z5h1ITtHelCpfu9R</td>\n",
+       "      <td>[electronica, german techno, leipzig electroni...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3AtYBAALKWcqxZs0KEKt4r</td>\n",
+       "      <td>4AK6F7OLvEQ5QYCBNiQWHq</td>\n",
+       "      <td>[boy band, pop, post-teen pop, talent show]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>24kXwnMOucjqg4GAssQLks</td>\n",
+       "      <td>3BroLrMp9Q01yOnhLn9qxX</td>\n",
+       "      <td>[polish alternative rap, polish hip hop, polis...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2q8RkxBduttply1L2qF0rJ</td>\n",
+       "      <td>5vUOpaF96QTRjj0o1ycWtz</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>57PlSDssRq1nXDqxNnfp7R</td>\n",
+       "      <td>0SfsnGyD8FpIN4U4WCkBZ5</td>\n",
+       "      <td>[dutch trance, edm, pop dance, progressive hou...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                track_uri              artist_uri  \\\n",
+       "0  3khntzHFE5TrhT7OKrFlPh  0rasA5Z5h1ITtHelCpfu9R   \n",
+       "1  3AtYBAALKWcqxZs0KEKt4r  4AK6F7OLvEQ5QYCBNiQWHq   \n",
+       "2  24kXwnMOucjqg4GAssQLks  3BroLrMp9Q01yOnhLn9qxX   \n",
+       "3  2q8RkxBduttply1L2qF0rJ  5vUOpaF96QTRjj0o1ycWtz   \n",
+       "4  57PlSDssRq1nXDqxNnfp7R  0SfsnGyD8FpIN4U4WCkBZ5   \n",
+       "\n",
+       "                                              genres  \n",
+       "0  [electronica, german techno, leipzig electroni...  \n",
+       "1        [boy band, pop, post-teen pop, talent show]  \n",
+       "2  [polish alternative rap, polish hip hop, polis...  \n",
+       "3                                                 []  \n",
+       "4  [dutch trance, edm, pop dance, progressive hou...  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# convert dictionary into dataframe with track_uri as the first column\n",
+    "df_genre = pd.DataFrame.from_dict(dict_genre, orient='index')\n",
+    "df_genre.insert(0, 'track_uri', df_genre.index)\n",
+    "df_genre.reset_index(inplace=True, drop=True)\n",
+    "\n",
+    "df_genre.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_uri</th>\n",
+       "      <th>artist_uri</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3khntzHFE5TrhT7OKrFlPh</td>\n",
+       "      <td>0rasA5Z5h1ITtHelCpfu9R</td>\n",
+       "      <td>electronica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3khntzHFE5TrhT7OKrFlPh</td>\n",
+       "      <td>0rasA5Z5h1ITtHelCpfu9R</td>\n",
+       "      <td>german techno</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3khntzHFE5TrhT7OKrFlPh</td>\n",
+       "      <td>0rasA5Z5h1ITtHelCpfu9R</td>\n",
+       "      <td>leipzig electronic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3khntzHFE5TrhT7OKrFlPh</td>\n",
+       "      <td>0rasA5Z5h1ITtHelCpfu9R</td>\n",
+       "      <td>minimal techno</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3khntzHFE5TrhT7OKrFlPh</td>\n",
+       "      <td>0rasA5Z5h1ITtHelCpfu9R</td>\n",
+       "      <td>tech house</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                track_uri              artist_uri              genres\n",
+       "0  3khntzHFE5TrhT7OKrFlPh  0rasA5Z5h1ITtHelCpfu9R         electronica\n",
+       "0  3khntzHFE5TrhT7OKrFlPh  0rasA5Z5h1ITtHelCpfu9R       german techno\n",
+       "0  3khntzHFE5TrhT7OKrFlPh  0rasA5Z5h1ITtHelCpfu9R  leipzig electronic\n",
+       "0  3khntzHFE5TrhT7OKrFlPh  0rasA5Z5h1ITtHelCpfu9R      minimal techno\n",
+       "0  3khntzHFE5TrhT7OKrFlPh  0rasA5Z5h1ITtHelCpfu9R          tech house"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_genre_expanded = df_genre.explode('genres')\n",
+    "df_genre_expanded.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save df_tableau and df_genre_expanded as csv files that we can load into Tableau\n",
+    "df_powerbi.to_csv('MySpotifyDataTable.csv')\n",
+    "df_genre_expanded.to_csv('GenresExpandedTable.csv')"
+   ]
   }
  ],
  "metadata": {
