--- a/data_extract.ipynb
+++ b/data_extract.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preparing Spotify Data for Tableau"
+    "# Preparing Spotify Data for Power BI"
    ]
   },
   {
@@ -422,8 +422,8 @@
    "outputs": [],
    "source": [
     "# save your IDs from new project in Spotify Developer Dashboard\n",
-    "CLIENT_ID = 'dc330fb30a704cadb2e3e21687f51943'\n",
-    "CLIENT_SECRET = '03a7b89d0d9e49db886efc7504da2180'"
+    "CLIENT_ID = 'client-id'\n",
+    "CLIENT_SECRET = 'client-secret'"
    ]
   },
   {
